--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,8 +1,7 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
-
 def config_android = rootProject.ext.android
 def config_dependencies = rootProject.ext.dependencies
 
@@ -11,13 +10,13 @@ android {
     buildToolsVersion config_android["buildToolsVersion"]
 
     defaultConfig {
-        applicationId config_android["applicationId"]
         minSdkVersion config_android["minSdkVersion"]
         targetSdkVersion config_android["targetSdkVersion"]
         versionCode config_android["versionCode"]
         versionName config_android["versionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -37,8 +36,12 @@ android {
 
 dependencies {
 
+    api config_dependencies["kotlin-stdlib"]
+    api config_dependencies["core-ktx"]
+    api config_dependencies["appcompat"]
+    api config_dependencies["material"]
     implementation config_dependencies["junit"]
     implementation config_dependencies["androidx.test.ext:junit"]
     implementation config_dependencies["espresso-core"]
-    implementation project(path: ':comnlib')
+    api config_dependencies["constraintlayout"]
 }
