--- a/config.gradle
+++ b/config.gradle
@@ -18,5 +18,7 @@ ext {
             "junit":"junit:junit:4.+",
             "androidx.test.ext:junit":"androidx.test.ext:junit:1.1.2",
             "espresso-core":"androidx.test.espresso:espresso-core:3.3.0",
+            //工具类
+            "utilcode":"com.blankj:utilcode:1.30.6",
     ]
 }
