--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 def config_android = rootProject.ext.android
 def config_dependencies = rootProject.ext.dependencies
@@ -48,4 +49,6 @@ dependencies {
     implementation config_dependencies["espresso-core"]
     api config_dependencies["constraintlayout"]
     api config_dependencies["utilcode"]
+    api config_dependencies["navigation-fragment-ktx"]
+    api config_dependencies["navigation-ui-ktx"]
 }
