--- a/config.gradle
+++ b/config.gradle
@@ -20,5 +20,7 @@ ext {
             "espresso-core":"androidx.test.espresso:espresso-core:3.3.0",
             //工具类
             "utilcode":"com.blankj:utilcode:1.30.6",
+            "navigation-fragment-ktx":"androidx.navigation:navigation-fragment-ktx:2.3.4",
+            "navigation-ui-ktx":"androidx.navigation:navigation-ui-ktx:2.3.4",
     ]
 }
