--- a/config.gradle
+++ b/config.gradle
@@ -22,5 +22,6 @@ ext {
             "utilcode":"com.blankj:utilcode:1.30.6",
             "navigation-fragment-ktx":"androidx.navigation:navigation-fragment-ktx:2.3.4",
             "navigation-ui-ktx":"androidx.navigation:navigation-ui-ktx:2.3.4",
+            "noober-background":"com.noober.background:core:1.6.5",
     ]
 }
