1、修改gradle引入方式 2、ARouter    1、拦截器    2、参数传递

--- a/basic.gradle
+++ b/basic.gradle
@@ -1,16 +1,13 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
-}
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion DhAndroid.compileSdkVersion
     buildToolsVersion DhAndroid.buildToolsVersion
 
     defaultConfig {
-        applicationId DhAndroid.applicationId
         minSdkVersion DhAndroid.minSdkVersion
         targetSdkVersion DhAndroid.targetSdkVersion
         versionCode DhAndroid.versionCode
@@ -36,13 +33,12 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
-    implementation project(path: ':lib:comnlib')
-    implementation project(path: ':module:login')
-    implementation project(path: ':module:setting')
-    implementation project(path: ':module:arouter')
     kapt(DhDependenciesCompiler.arouter_compiler)
 }
 
