--- a/module/login/src/main/AndroidManifest.xml
+++ b/module/login/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
