--- a/config.gradle
+++ b/config.gradle
@@ -1,29 +1,37 @@
-ext {
-    android = [
-            applicationId    : "com.derelicthut.basecode.mvvmkotlin",
-            compileSdkVersion: 30,
-            buildToolsVersion: "30.0.2",
-            minSdkVersion    : 21,
-            targetSdkVersion : 30,
-            versionCode      : 1,
-            versionName      : "1.0"
-    ]
-
-    dependencies = [
-            "kotlin-stdlib":"org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
-            "core-ktx":"androidx.core:core-ktx:1.3.2",
-            "appcompat":"androidx.appcompat:appcompat:1.2.0",
-            "material":"com.google.android.material:material:1.2.1",
-            "constraintlayout":"androidx.constraintlayout:constraintlayout:2.0.4",
-            "junit":"junit:junit:4.+",
-            "androidx.test.ext:junit":"androidx.test.ext:junit:1.1.2",
-            "espresso-core":"androidx.test.espresso:espresso-core:3.3.0",
-            //工具类
-            "utilcode":"com.blankj:utilcode:1.30.6",
-            "navigation-fragment-ktx":"androidx.navigation:navigation-fragment-ktx:2.3.4",
-            "navigation-ui-ktx":"androidx.navigation:navigation-ui-ktx:2.3.4",
-            "noober-background":"com.noober.background:core:1.6.5",
-            "arouter":"com.alibaba:arouter-api:1.5.1",
-            "arouter-compiler":"com.alibaba:arouter-compiler:1.5.1",
-    ]
-}
+//ext {
+//    android = [
+//            applicationId    : "com.derelicthut.basecode.mvvmkotlin",
+//            compileSdkVersion: 30,
+//            buildToolsVersion: "30.0.2",
+//            minSdkVersion    : 21,
+//            targetSdkVersion : 30,
+//            versionCode      : 1,
+//            versionName      : "1.0"
+//    ]
+//
+//    dependencies = [
+//            "kotlin-stdlib"          : "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+//            "core-ktx"               : "androidx.core:core-ktx:1.3.2",
+//            "appcompat"              : "androidx.appcompat:appcompat:1.2.0",
+//            "material"               : "com.google.android.material:material:1.2.1",
+//            "constraintlayout"       : "androidx.constraintlayout:constraintlayout:2.0.4",
+//            "junit"                  : "junit:junit:4.+",
+//            "androidx.test.ext:junit": "androidx.test.ext:junit:1.1.2",
+//            "espresso-core"          : "androidx.test.espresso:espresso-core:3.3.0",
+//            //工具类
+//            "utilcode"               : "com.blankj:utilcode:1.30.6",
+//            "navigation-fragment-ktx": "androidx.navigation:navigation-fragment-ktx:2.3.4",
+//            "navigation-ui-ktx"      : "androidx.navigation:navigation-ui-ktx:2.3.4",
+//            "noober-background"      : "com.noober.background:core:1.6.5",
+//            "arouter"                : "com.alibaba:arouter-api:1.5.1",
+//            "arouter-compiler"       : "com.alibaba:arouter-compiler:1.5.1",
+//    ]
+////TODO 采用for循环式进行依赖引入
+////
+////    implementationExcludes = [
+////
+////    ]
+////
+////    annotationProcessor = [
+////    ]
+//}
