--- a/lib/comnlib/build.gradle
+++ b/lib/comnlib/build.gradle
@@ -1,51 +1,8 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
-    id 'kotlin-kapt'
-}
-
-def config_android = rootProject.ext.android
-
-android {
-    compileSdkVersion config_android["compileSdkVersion"]
-    buildToolsVersion config_android["buildToolsVersion"]
-
-    defaultConfig {
-        minSdkVersion config_android["minSdkVersion"]
-        targetSdkVersion config_android["targetSdkVersion"]
-        versionCode config_android["versionCode"]
-        versionName config_android["versionName"]
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
+apply from: '../../basic.gradle'
 
 dependencies {
     api project(path: ':lib:base')
     api project(path: ':lib:netlib')
     api project(path: ':lib:uilib')
     api project(path: ':lib:dblib')
-    kapt(rootProject.ext.dependencies["arouter-compiler"])
-}
-
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
 }
