--- a/module/arouter/src/main/AndroidManifest.xml
+++ b/module/arouter/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dh.setting">
+    package="com.dh.app.arouter">
 
     <application>
         <activity
-            android:name="com.dh.setting.ui.activity.SettingActivity"
+            android:name=".ui.activity.ARouterActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.dh.setting.ui.activity.RealNameActivity"
+            android:name=".ui.activity.WithParamActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
