1、ARouter    1、路由替换PathReplaceService    2、参数传递withObject实现    3、动态路由注册（需要1.5.2版本或以上）

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
