--- a/module/arouter/src/main/AndroidManifest.xml
+++ b/module/arouter/src/main/AndroidManifest.xml
@@ -9,5 +9,11 @@
         <activity
             android:name=".ui.activity.WithParamActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.DynamicRouteRegistrationActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.PathReplaceServiceActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
