--- a/module/arouter/src/main/AndroidManifest.xml
+++ b/module/arouter/src/main/AndroidManifest.xml
@@ -15,5 +15,8 @@
         <activity
             android:name=".ui.activity.PathReplaceServiceActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.PretreatmentServiceActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
