--- a/module/arouter/src/main/AndroidManifest.xml
+++ b/module/arouter/src/main/AndroidManifest.xml
@@ -18,5 +18,8 @@
         <activity
             android:name=".ui.activity.PretreatmentServiceActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.DegradeServiceActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
