1、添加room数据库 2、创建User表，并升级数据库

--- a/lib/dblib/build.gradle
+++ b/lib/dblib/build.gradle
@@ -2,4 +2,7 @@ apply from: '../../basic.gradle'
 
 dependencies {
     implementation project(path: ':lib:base')
+    api DhDependencies.room
+    api DhDependencies.room_ktx
+    kapt(DhDependenciesCompiler.room_compiler)
 }
