--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'com.alibaba.arouter'
 }
 
 android {
@@ -46,6 +47,7 @@ dependencies {
     implementation project(path: ':module:login')
     implementation project(path: ':module:setting')
     implementation project(path: ':module:arouter')
+    implementation project(path: ':module:room')
     kapt(DhDependenciesCompiler.arouter_compiler)
 }
 
