--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url "http://maven.noxmobi.com/repository/noxmobi-ads/"
+        }
     }
 }
 
